# tools_project

./: CMakeLists.txt  README.md  memo
OpenCV_utilities/: CMakeLists.txt  OpenCV_tools.cpp  OpenCV_tools.hpp  paint_tools.cpp  paint_tools.hpp
average/: CMakeLists.txt  main.cpp
blacknwhite/: CMakeLists.txt  main.cpp
chromakey/: CMakeLists.txt  main.cpp
crop/: CMakeLists.txt  main.cpp
deperspectivize/: CMakeLists.txt  main.cpp
diff_gauss/: CMakeLists.txt  main.cpp  test.cpp
gaussian/: CMakeLists.txt  main.cpp
range_stretch/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
threshold/: CMakeLists.txt  main.cpp
