cmake_minimum_required(VERSION 2.8)
project( color_stretch )
find_package( OpenCV REQUIRED )
add_definitions( -std=c++11 )
add_executable( color_stretch main.cpp )
target_link_libraries( color_stretch ${OpenCV_LIBS})
message("________________________________________________________________________________")
