cmake_minimum_required(VERSION 2.8)
project( range_stretch )
find_package( OpenCV REQUIRED )
add_definitions( -std=c++11 )
add_executable( range_stretch main.cpp )
target_link_libraries( range_stretch ${OpenCV_LIBS})
message("________________________________________________________________________________")
